--- a/web/homepage.html
+++ b/web/homepage.html
@@ -9,12 +9,14 @@
 <body>
 
 <h1>leavethe.net</h1>
-<p>welcome to leavethenet. Join our club of people who want to go places with people.</p>
+<p><i class="subtext indent">- Where our motto is to leavethe.net</i></p>
+<p>welcome to leavethe.net. Join our club of people who want to do things with people.</p>
 <ul>
 	<li>Organize events and groups with your friends</li>
 	<li>Traverse your social network to find more friends you have stuff in common with</li>
-	<li>Go outside and do things. Live life. Have fun</li>
+	<li>Go outside and do things. Live life. leavethe.net!</li>
 </ul>
 <h2><a href="main.html">enter</a></h2>
+<p><a href="about.html">about</a><p>
 </body>
 </html>
