mv homepage->index

--- a/about.html
+++ b/about.html
@@ -77,6 +77,6 @@
 	not the focus of facebook. So, I am suggesting another substrate with a
 	clear focus in mind: to leavethe.net!!!!!
 </p
-<h2><a href="homepage.html">back to the homepage</a></h2>
+<h2><a href="index.html">back to the homepage</a></h2>
 </body>
 </html>
