--- a/chosen.html
+++ b/chosen.html
@@ -11,12 +11,15 @@
 <p><i class="subtext indent">- Now with buttered popcorn!</i></p>
 <img src="jesus.jpg">
 <ul>
-	<li>Next date: March 29</li>
+	<li>Next date: March 29, 2022</li>
 	<li>Next episode: Season 2, Episode 3</li>
 	<li>Location: The Wallace</li>
 	<li>If you don't know where the Wallace is, ask TK</li>
 	<li>If you don't know who TK is, this webpage is probably not meant for you.</li>
 </ul>
+<p class="subtext">
+	Check back on this website for updates on this event
+</p>
 <h2><a href="index.html">back to the homepage</a></h2>
 </body>
 </html>
