--- a/party.html
+++ b/party.html
@@ -7,10 +7,12 @@
 </head>
 <body>
 
-<h1>The Wallace</h1>
-<p>And let us consider how to stir up one another to love and good works, not neglecting to meet together, as is the habit of some, but encouraging one another, and all the more as you see the Day drawing near.</p>
+<p>The Wallace Presents...</p>
+<h1>Electric Bugaloo</h1>
+<h2>Tight N Bright</h2>
 
-<p><i class="subtext indent">- Hebrews 10:24-25</i></p>
+<p>Come one, come all, to another classic party</p>
+
 
 <image src="wallace.jpg" size=30></image>
 
