--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="shortcut icon" type="image/jpeg" href="favicon"/>
-	<!-- This is goatcounter, just so I can see if there is anybody reading this site. It does not track any personal data and is open sourced. Check it out! https://www.goatcounter.com -->
 	<title>leavethenet</Title>
 </head>
 <body>
 
-<h1>leavethe.net</h1>
-<p><i class="subtext indent">- Where our motto is to leavethe.net</i></p>
-<p>welcome to leavethe.net. Join our club of people who want to do things with people.</p>
-<ul>
-	<li>Organize events and groups with your friends</li>
-	<li>Traverse your social network to find more friends you have stuff in common with</li>
-	<li>Go outside and do things. Live life. leavethe.net!</li>
-</ul>
+<h1>The Wallace</h1>
+<p>And let us consider how to stir up one another to love and good works, not neglecting to meet together, as is the habit of some, but encouraging one another, and all the more as you see the Day drawing near.</p>
+
+<p><i class="subtext indent">- Hebrews 10:24-25</i></p>
+
+<image src="wallace.jpg" size=30></image>
+
+<h2>Some Upcoming Events</h2>
 <h2><a href="main.html">enter</a></h2>
 <p><a href="about.html">about</a><p>
 </body>
