--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="shortcut icon" type="image/jpeg" href="favicon"/>
-	<title>leavethenet</Title>
+	<title>The Wallace</Title>
 </head>
 <body>
 
-<h1>The Wallace</h1>
+<h1>The Wallace Community House</h1>
 <p>And let us consider how to stir up one another to love and good works, not neglecting to meet together, as is the habit of some, but encouraging one another, and all the more as you see the Day drawing near.</p>
 
 <p><i class="subtext indent">- Hebrews 10:24-25</i></p>
 
-<image src="wallace.jpg" size=30></image>
+<img src="wallace.jpg" height=200px></img>
 
-<h2>Some Upcoming Events</h2>
-<h2><a href="main.html">enter</a></h2>
-<p><a href="about.html">about</a><p>
+<h2><a href="party.html"a>Some Upcoming Events</a></h2>
 </body>
 </html>
