--- a/party.html
+++ b/party.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/party.css">
 	<link rel="shortcut icon" type="image/jpeg" href="favicon"/>
-	<title>leavethenet</Title>
+	<title>Wallace Party</Title>
 </head>
 <body>
 
-<p>The Wallace Presents...</p>
-<h1>Electric Bugaloo</h1>
-<h2>Tight N Bright</h2>
+<div class="hf">
+	<p class="hft">The Wallace Presents...</p>
+</div>
 
-<p>Come one, come all, to another classic party</p>
+<h1 style="color:rgb(157, 255, 0)">
+	Electric Bugaloo
+</h1>
+<h2 style="color:rgb(157, 255, 0)">
+	Tight and Bright
+</h2>
+
+<p>
+	The party of parties! Lets all get together celebrate the end of the
+	semester, and (for many of us) the end of university.
+</p>
+
+<ul>
+	<li>Date: April 29</li>
+	<li>Location: The Wallace (Dunbar Area, address will be posted the day of)</li>
+	<li>Cost: $5 to cover bar costs + glow sticks</li>
+	<ul>
+		<li>
+			Unless you don't wear anything tight or bright, in which the cost is
+			$10 so we can make up for your sad party spirit
+		</li>
+	</ul>
+</ul>
+
+<p>
+	Instructions: Please bring $5 to cover the bar costs + glow sticks for this event.
+	We do not have tap so please bring cash.
+</p>
+
+<p>
+	Here are some photos for inspiration, but please <a href="https://www.youtube.com/watch?v=9C_HReR_McQ">let's get creative</a>:
+</p>
 
 
-<image src="wallace.jpg" size=30></image>
+<img class="img-border" src="images/party0.jpg"></img>
+<img class="img-border" src="images/party1.jpg"></img>
+<img class="img-border" src="images/party2.jpg"></img>
+<img class="img-border" src="images/party3.jpg"></img>
+<img class="img-border" src="images/party4.jpg"></img>
 
-<h2>Some Upcoming Events</h2>
-<h2><a href="main.html">enter</a></h2>
-<p><a href="about.html">about</a><p>
+<p>
+	Let's all be chill and merry! I'm looking forward to seeing your dope dance moves
+</p>
+
+<p>
+	- TK
+</p>
+
 </body>
 </html>
