--- a/party.html
+++ b/party.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div class="hf">
-	<p class="hft">The Wallace Presents...</p>
+<div class="text-bg">
+	<p>The Wallace Presents...... Party number 2</p>
 </div>
 
 <h1 style="color:rgb(157, 255, 0)">
@@ -18,32 +18,36 @@
 	Tight and Bright
 </h2>
 
+<div class="text-bg">
 <p>
 	The party of parties! Lets all get together celebrate the end of the
-	semester, and (for many of us) the end of university.
+	semester, and the beginning of summer! ☀️
+</p>
+
+<p>
+	Theme: that's right, it's tight and bright! But really, anything 80's
+	works for us. Break out those vintage headbands, dust off that walkman,
+	bring <a href="https://i.imgur.com/NGjlUop.jpg">that cup</a>. Our 70's
+	party was a huge success and so let's double down on a good thing.
 </p>
 
 <ul>
-	<li>Date: April 29</li>
+	<li>Date: Friday, April 29</li>
+	<li>Time: 8:58 until late</li>
 	<li>Location: The Wallace (Dunbar Area, address will be posted the day of)</li>
-	<li>Cost: $5 to cover bar costs + glow sticks</li>
+	<li>Cost: $5 to cover bar costs + glow sticks. We do not have tap so please bring cash.</li>
 	<ul>
 		<li>
-			Unless you don't wear anything tight or bright, in which the cost is
-			$10 so we can make up for your sad party spirit
+			If you don't wear anything tight or bright, the cost is
+			$10 since you're gonna need a lot of glow sticks to fit in
 		</li>
 	</ul>
 </ul>
 
 <p>
-	Instructions: Please bring $5 to cover the bar costs + glow sticks for this event.
-	We do not have tap so please bring cash.
-</p>
-
-<p>
 	Here are some photos for inspiration, but please <a href="https://www.youtube.com/watch?v=9C_HReR_McQ">let's get creative</a>:
 </p>
-
+</div>
 
 <img class="img-border" src="images/party0.jpg"></img>
 <img class="img-border" src="images/party1.jpg"></img>
