--- a/party.html
+++ b/party.html
@@ -27,8 +27,7 @@
 <p>
 	Theme: that's right, it's tight and bright! But really, anything 80's
 	works for us. Break out those vintage headbands, dust off that walkman,
-	bring <a href="https://i.imgur.com/NGjlUop.jpg">that cup</a>. Our 70's
-	party was a huge success and so let's double down on a good thing.
+	bring <a href="https://i.imgur.com/NGjlUop.jpg">that cup</a>.
 </p>
 
 <ul>
@@ -47,6 +46,7 @@
 <p>
 	Here are some photos for inspiration, but please <a href="https://www.youtube.com/watch?v=9C_HReR_McQ">let's get creative</a>:
 </p>
+
 </div>
 
 <img class="img-border" src="images/party0.jpg"></img>
