--- a/party.html
+++ b/party.html
@@ -27,7 +27,9 @@
 <p>
 	Theme: that's right, it's tight and bright! But really, anything 80's
 	works for us. Break out those vintage headbands, dust off that walkman,
-	bring <a href="https://i.imgur.com/NGjlUop.jpg">that cup</a>.
+	bring <a href="https://i.imgur.com/NGjlUop.jpg">that cup</a>. I'm trying
+	to keep this an open and welcoming event, so please feel free to bring
+	your chillest and most respectful friends.
 </p>
 
 <ul>
@@ -44,7 +46,11 @@
 </ul>
 
 <p>
-	Here are some photos for inspiration, but please <a href="https://www.youtube.com/watch?v=9C_HReR_McQ">let's get creative</a>:
+	RSVP will be open soon
+</p>
+
+<p>
+	Outfits: here are some photos for inspiration, but please <a href="https://www.youtube.com/watch?v=9C_HReR_McQ">let's get creative</a>:
 </p>
 
 </div>
