--- a/party.html
+++ b/party.html
@@ -12,7 +12,7 @@
 </div>
 
 <h1 style="color:rgb(157, 255, 0)">
-	Electric Bugaloo
+	Electric Boogaloo
 </h1>
 <h2 style="color:rgb(157, 255, 0)">
 	Tight and Bright
