--- a/party.html
+++ b/party.html
@@ -4,6 +4,10 @@
 	<link rel="stylesheet" href="styles/party.css">
 	<link rel="shortcut icon" type="image/jpeg" href="favicon"/>
 	<title>Wallace Party</Title>
+	<!-- This is goatcounter, just so I can see if there is anybody reading
+	this site. It does not track any personal data and is open sourced.
+	Check it out! https://www.goatcounter.com -->
+	<script data-goatcounter="https://tykeeling.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
 
