--- a/party.html
+++ b/party.html
@@ -49,9 +49,7 @@
 	</ul>
 </ul>
 
-<p>
-	RSVP will be open soon
-</p>
+<p style="font-size:50px"><a href="darulez.html">RSVP Here</a></p>
 
 <p>
 	Outfits: here are some photos for inspiration, but please <a href="https://www.youtube.com/watch?v=9C_HReR_McQ">let's get creative</a>:
