--- a/party.html
+++ b/party.html
@@ -22,6 +22,10 @@
 	Tight and Bright
 </h2>
 
+<h2 style="color:rgb(157, 255, 0)">
+	4525 Wallace Street
+</h2>
+
 <div class="text-bg">
 <p>
 	The party of parties! Lets all get together celebrate the end of the
