--- a/party.html
+++ b/party.html
@@ -38,14 +38,8 @@
 <ul>
 	<li>Date: Friday, April 29</li>
 	<li>Time: 8:58 until late</li>
-	<li>Location: The Wallace (Dunbar Area, address will be posted the day of)</li>
-	<li>Cost: $5 to cover bar costs + glow sticks. We do not have tap so please bring cash.</li>
-	<ul>
-		<li>
-			If you don't wear anything tight or bright, the cost is
-			$10 since you're gonna need a lot of glow sticks to fit in
-		</li>
-	</ul>
+	<li>Location: The Wallace</li>
+	<li>4525 Wallace Street</li>
 </ul>
 
 <p style="font-size:50px"><a href="darulez.html">RSVP Here</a></p>
