--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <img src="wallace.jpg" height=200px></img>
 
-<h2><a href="party.html"a>Some Upcoming Events</a></h2>
+<h2>Some Upcoming Events</h2>
+
+<center><iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23f0f0f0&ctz=America%2FVancouver&showTitle=1&showNav=1&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=NTlmNmFjYzI1NGE0MGYwOTZlYmYwYWZjMzEwZmFlMjM2NWQ3ZTJlOTk3MDc3ODZiNzNhODgzMGRjY2I2ZWQ4Y0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23D81B60" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></center>
+
+<h2><a href="chosen.html"a>The Chosen (RIP)</a></h2>
+<p></p>
 </body>
 </html>
