--- a/darulez.html
+++ b/darulez.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="styles/party.css">
+	<link rel="stylesheet" href="styles/halloween.css">
 	<link rel="shortcut icon" type="image/jpeg" href="favicon"/>
 	<title>Wallace Party</Title>
 	<!-- This is goatcounter, just so I can see if there is anybody reading
@@ -11,20 +11,18 @@
 </head>
 <body>
 
-<div class="text-bg">
-	<p>The Wallace Presents...... Party number 2</p>
+
+<p><img class="jack-img" src="./images/jack2.webp">The Wallace Presents...... our spookiest event yet</p>
+
 </div>
 
-<h1 style="color:rgb(157, 255, 0)">
-	Electric Boogaloo
+<h1 style="color:rgb(255, 153, 51)">
+	Halloween Disco
 </h1>
-<h2 style="color:rgb(157, 255, 0)">
-	Tight and Bright
-</h2>
 
 <div class="text-bg">
 <p>
-	Da Rulez:
+	Please read Rulez:
 </p>
 
 <ul>
@@ -33,11 +31,8 @@
 		treat this place with respect as if you were living here as well.
 	</li>
 	<li>
-		Please come in your best and brightest outfits (and smiles). You have seen my
-		fashion recommendations but you do you.
-	</li>
-	<li>
-		Please do not go downstairs or open any doors that are closed.
+		Please do not open any doors that are closed. There will be some house beer
+		available but please bring your own substances to supplement and share :)
 	</li>
 	<li>
 		We live in a neighbourhood of retirees. To avoid any noise complaints, please
@@ -45,18 +40,15 @@
 		games outside (weather dependent)
 	</li>
 	<li>
-		Please bring $5 cash to help pay for decorations and 2 drinks from the house bar.
-		You'll likely want to bring your own alcohol as well.
-	</li>
-	<li>
-		Friends are welcome and lovely! Just please RSVP so we can get a sense of how many
+		Friends are welcome and lovely - Just please RSVP so we can get a sense of how many
 		guests to expect
 	</li>
 </ul>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScheZ30Bmw-opMUcF54kUSKqrwmSbYHmJ00astG2QpNKUTtVQ/viewform?embedded=true" width="640" height="827" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScheZ30Bmw-opMUcF54kUSKqrwmSbYHmJ00astG2QpNKUTtVQ/viewform?usp=sf_link">Or click this link if the form is not working</a></p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgJ5XN82DXeAJek0tLi8A8_5OHRBj8F47_-22mYyCH1xZL9w/viewform?embedded=true" width="640" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgJ5XN82DXeAJek0tLi8A8_5OHRBj8F47_-22mYyCH1xZL9w/viewform?usp=sf_link">Or click this link if the form is not working</a></p>
 
+<img src="./images/DISCO_PARTY.jpg" width="100%">
 </div>
 
 </body>
