--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <img src="wallace.jpg" height=200px></img>
 
 <h2>Some Upcoming Events</h2>
+<p><a href=https://calendar.google.com/calendar/embed?src=59f6acc254a40f096ebf0afc310fae2365d7e2e99707786b73a8830dccb6ed8c%40group.calendar.google.com&ctz=America%2FVancouver</a>Modify</p>
 
 <center><iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23f0f0f0&ctz=America%2FVancouver&showTitle=1&showNav=1&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=NTlmNmFjYzI1NGE0MGYwOTZlYmYwYWZjMzEwZmFlMjM2NWQ3ZTJlOTk3MDc3ODZiNzNhODgzMGRjY2I2ZWQ4Y0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23D81B60" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></center>
 
