--- a/halloween.html
+++ b/halloween.html
@@ -25,7 +25,7 @@
 
 <div class="text-bg">
 
-<p>gouls and gals 👺,</p>
+<p>ghouls and gals 👺,</p>
 
 <p>As the moon ascends to its zenith and the night embraces its deepest secrets, you are cordially invited to our Halloween Disco Party. Join us for an evening shrouded in mystery, where the unknown beckons and the dance floor is your guide.</p>
 
