--- a/halloween.html
+++ b/halloween.html
@@ -40,7 +40,7 @@
 <p>Join us under the shroud of the Halloween moon for a soirée of unparalleled mystique, enigmatic encounters, and revelations waiting to unfold.</p>
 
 
-<p>Kindly RSVP by October 20th to secure your presence at this exclusive gathering. Embrace the allure of the unknown, for the night is filled with secrets yet to be discovered.</p>
+<p>Kindly RSVP by to secure your presence at this exclusive gathering. Embrace the allure of the unknown, for the night is filled with secrets yet to be discovered.</p>
 
 <ul>
 <p>🌟 Date: Saturday, October 28th</p>
