--- a/halloween.html
+++ b/halloween.html
@@ -45,7 +45,7 @@
 <ul>
 <p>🌟 Date: Saturday, October 28th</p>
 <p>🌟 Time: 8:45 PM until the Witching Hour</p>
-<p>🌟 Location: The Haunted Estate of Sir Richard Wallace</p>
+<p>🌟 Location: The Haunted Estate of Sir Richard Wallace (4525 Wallace Street)</p>
 </ul>
 
 <p style="font-size:50px"><a href="https://thewallace.org/darulez.html">RSVP Here</a></p>
